# oscar

./: .gitignore  README.md
oscar_bringup/: CMakeLists.txt  package.xml
oscar_bringup/launch/: oscar_table.launch
oscar_bringup/rviz/: view_oscar.rviz
oscar_common/: CMakeLists.txt  package.xml
oscar_common/scripts/: arms_control_services.py  change_hands_test.py  grab_box.py  moveit_test.py  oscar_command_services.py
oscar_control/: CMakeLists.txt  package.xml
oscar_control/config/: oscar_controllers0.yaml  oscar_controllers1.yaml
oscar_control/launch/: oscar_control.launch
oscar_description/: CMakeLists.txt  frames.gv  package.xml
oscar_description/launch/: display.launch  display_gazebo.launch
oscar_description/meshes/: base_link.STL  depth_camera_link.STL  rgb_camera_link.STL
oscar_description/rviz/: urdf_gazebo.rviz
oscar_description/urdf/: oscar.gazebo  oscar.urdf.xacro  oscar.xacro  test.urdf
oscar_gazebo/: CMakeLists.txt  package.xml
oscar_gazebo/launch/: table_world.launch
oscar_gazebo/models/basket/: basket.sdf  basket.stl  model.config
oscar_gazebo/models/button/: button.sdf  model.config
oscar_gazebo/models/object/: model.config  object.sdf  object_box.sdf  object_cylinder.sdf  object_sphere.sdf
oscar_gazebo/models/red_box/: box.sdf  model.config
oscar_gazebo/models/red_cylinder/: cylinder.sdf  model.config
oscar_gazebo/models/red_sphere/: model.config  sphere.sdf
oscar_gazebo/models/table/: model.config  table.sdf
oscar_gazebo/worlds/: table.world
oscar_mdb/: CMakeLists.txt  package.xml
oscar_mdb/config/: hack_ltm_config_oscar.yaml  hack_ros_parameters_oscar.yaml  ltm_config_oscar.yaml  ltm_config_oscar_subgoals.yaml  ros_parameters_oscar.yaml
oscar_mdb/launch/: hack_ltm_oscar.launch  ltm_oscar.launch
oscar_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
oscar_msgs/: CMakeLists.txt  package.xml
oscar_msgs/srv/: ArmControl.srv  (+2 more)
oscar_perception/: CMakeLists.txt  package.xml
oscar_perception/launch/: find_object_3d.launch
oscar_perception/scripts/: oscar_perception_publisher.py  oscar_perception_server.py  oscar_perception_services.py
oscar_perception/test_img/: test_percept.ods
oscar_tests/: CMakeLists.txt  package.xml
oscar_tests/launch/: perception_test.launch  pose_test.launch
oscar_tests/objects/: test_box200.sdf  test_cylinder200.sdf  test_cylinder50.sdf
oscar_tests/results/perception_test/: perc_2021-05-06_basket.csv  perc_2021-05-06_cylinder.csv  perc_2021-05-06_object.csv
oscar_tests/results/pick_place_test/: exp_r10_box1_vel0.1.csv  exp_r10_box1_vel1.csv  exp_r11_cyl1_vel0.1.csv  exp_r11_cyl1_vel1.csv  exp_r12_box0_vel0.1.csv  exp_r12_box0_vel1.csv  exp_r13_box0_vel0.1.csv  exp_r13_box0_vel1.csv  exp_r14_box0_vel0.02.csv  exp_r14_box0_vel0.5.csv  exp_r15_cyl1_vel0.1.csv  exp_r15_cyl1_vel1.csv  exp_r16_box1_vel0.02.csv  exp_r16_box1_vel0.5.csv  exp_r17_cyl0_vel0.1.csv  exp_r17_cyl0_vel1.csv  exp_r18_cyl0_vel0.1.csv  exp_r18_cyl0_vel1.csv  exp_r19_box0_vel0.1.csv  exp_r19_box0_vel1.csv  exp_r1_box0_vel0.02.csv  exp_r1_box0_vel0.5.csv  exp_r20_cyl1_vel0.02.csv  exp_r20_cyl1_vel0.5.csv  exp_r21_box1_vel0.02.csv  exp_r21_box1_vel0.5.csv  exp_r22_cyl1_vel0.02.csv  exp_r22_cyl1_vel0.5.csv  exp_r23_cyl0_vel0.1.csv  exp_r23_cyl0_vel1.csv  exp_r24_box1_vel0.1.csv  exp_r24_box1_vel1.csv  exp_r2_cyl0_vel0.02.csv  exp_r2_cyl0_vel0.5.csv  exp_r3_cyl1_vel0.1.csv  exp_r3_cyl1_vel1.csv  exp_r4_cyl1_vel0.02.csv  exp_r4_cyl1_vel0.5.csv  exp_r5_box1_vel0.02.csv  exp_r5_box1_vel0.5.csv  (+8 more)
oscar_tests/results/pose_test/: exp_cont0_vel0.5_load0.05.csv  exp_cont0_vel0.5_load0.2.csv  exp_cont0_vel1_load0.05.csv  exp_cont0_vel1_load0.2.csv  exp_cont1_vel0.5_load0.05.csv  exp_cont1_vel0.5_load0.2.csv  exp_cont1_vel1_load0.05.csv  exp_cont1_vel1_load0.2.csv  test0.csv  test1.csv  test2.csv
oscar_tests/scripts/: perception_test.py  pick_and_place_factors.csv  pick_place_test.py  pose_test.py  test_box50.sdf  workspace_pick.csv
(+24 files in other folders)
