<?xml version="1.0"?>
<package format="2">
  <name>oscar_control</name>
  <version>0.1.0</version>
  <description>The oscar_control package</description>

  <author email="efallashdez@gmail.com">Emanuel Fallas</author>
  <maintainer email="efallashdez@gmail.com">Emanuel Fallas</maintainer>
  <license>GPLv3</license>

  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>controller_manager</build_depend>
  <build_depend>joint_state_publisher</build_depend>
  <build_export_depend>controller_manager</build_export_depend>
  <build_export_depend>joint_state_publisher</build_export_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
