<?xml version="1.0"?>
<package format="2">
  <name>oscar_gazebo</name>
  <version>0.1.0</version>
  <description>The oscar_gazebo package</description>

  <author email="efallashdez@gmail.com">Emanuel Fallas</author>
  <maintainer email="efallashdez@gmail.com">Emanuel Fallas</maintainer>
  <license>GPLv3</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_export_depend>gazebo_ros</build_export_depend>
  <exec_depend>gazebo_ros</exec_depend>
  


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Allows gazebo to read the models folder in this package-->
    <!--  (i'm not sure why it is repeated but it works) -->
    <gazebo_ros gazebo_model_path="${prefix}/models"/>
    <gazebo_ros gazebo_media_path="${prefix}/models"/>
  </export>
</package>
