<?xml version="1.0"?>
<package format="2">
  <name>oscar_perception</name>
  <version>0.1.0</version>
  <description>The oscar_perception package</description>

  <author email="efallashdez@gmail.com">Emanuel Fallas</author>
  <maintainer email="efallashdez@gmail.com">Emanuel Fallas</maintainer>
  <license>GPLv3</license>

  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
